--- a/components/UserSettings.module.css
+++ b/components/UserSettings.module.css
@@ -11,6 +11,12 @@
   z-index: 1000;
 }
 
+/* Left fill area */
+.leftFill {
+  flex: 1;
+  background-color: var(--background-secondary);
+}
+
 /* Sidebar */
 .sidebar {
   width: 218px;
@@ -18,7 +24,6 @@
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  margin-left: auto;
 }
 
 .sidebarScroller {
@@ -377,11 +382,18 @@
   padding: 20px 0;
 }
 
+/* Right fill area */
+.rightFill {
+  flex: 1;
+  background-color: var(--background-primary);
+  position: relative;
+}
+
 /* Close Button */
 .closeSection {
-  position: fixed;
+  position: absolute;
   top: 60px;
-  right: calc(50% - 370px - 72px);
+  left: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
